<resources>
    <string name="app_name">食安云采购验收</string>
    <string name="str_login_title">欢迎来到可视验收系统</string>
    <string name="hint_account">请输入账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="str_send_date">配送日期:</string>
    <string name="str_detail">详情</string>
    <string name="str_company">供&#160;&#160;&#160;应&#160;&#160;商：</string>
    <string name="str_strade_no">订单编号：</string>
    <string name="str_delivery_date">配送日期：</string>
    <string name="str_check">验收</string>
    <string name="output_photo_directory">Terminal</string>
    <string name="output_photo_name_template">Ter_%1$s</string>
    <string name="output_photo_water_template">Water_%1$s</string>

    <string name="output_photo_date_template">yyyyMMdd_HHmmss</string>
    <string name="output_photo_ext">.jpg</string>
    <string name="reload_data">数据加载异常~点击重新加载</string>
    <string name="net_disconnected">当前网络连接不可用</string>
    <string name="no_network">请求数据出错啦!</string>
    <string name="on_loading_more">正在努力加载更多..</string>
    <string name="retry_load_hint">加载出错, 点击重新加载..</string>

    <string name="network_error">当前无网络，请检查你的网络设置</string>
    <string name="notify_no_network">网络连接不可用，请稍后重试！</string>
    <string name="esky_service_exception">网络不给力，请稍候重试！</string>
    <string name="time_out_please_try_again_later">连接超时,请稍后再试</string>

    <string name="btn_cancel_update">下次再说</string>
    <string name="btn_update_now">立即更新</string>
    <string name="tips_new_version">发现新版本...</string>
    <string name="download_fail">下载失败</string>
    <string name="has_download">已下载</string>
    <string name="permission_to_store">暂无储存权限，是否前往打开</string>
    <string name="cancel">取消</string>
    <string name="go_to">前往</string>
    <string name="wifi_tips">当前处于非WIFI连接，是否继续？</string>
    <string name="tips">提示</string>
    <string name="confirm">确定</string>
    <string name="downloading">下载中...</string>
    <string name="installing">安装中...</string>
    <string name="install">安装</string>
    <string name="apk_file_download_fail">安装文件下载失败</string>
    <string name="str_adjust_scala">电子称校准</string>
    <string name="check_title_1">第一步 准备校准</string>
    <string name="check_content_1">清空秤台并保持秤台静止，操作完成后，点击『下一步』按钮。</string>
    <string name="check_title_2">第二步 放置标准砝码</string>
    <string name="check_content_2">请将标准砝码放置在需要进行校准操作的秤台上，操作完成并静止一段时间后，点击『下一步』按钮。</string>
    <string name="check_title_3">第三步 设定分度值并输入砝码重量</string>
    <string name="check_content_3">设定分度值并输入砝码重量，操作完成后，点击『下一步』按钮。</string>
    <string name="check_content_3_indication">电子秤分度值：1</string>
    <string name="check_content_3_weight">砝码重量(Kg)：</string>
    <string name="check_weight_hint">请输入放置砝码的重量</string>
    <string name="check_title_4">第四步 校验完成</string>
    <string name="check_content_4">校验完成，请点击『完成』按钮退出本向导。</string>
    <string name="check_next">下一步</string>
    <string name="check_pre">上一步</string>
    <string name="accessibility_service_description">应用自动安装服务</string>

</resources>